--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     ]
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.1",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
